# otpauth

./: .gitignore  .travis.yml  CHANGES.rst  Makefile  README.md  README.rst  otpauth.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  sonar-project.properties  test_otpauth.py
.github/workflows/: docs.yml  pypi.yml  tests.yml
docs/: alternatives.rst  api.rst  changelog.rst  conf.py  contribute.rst  index.rst  recipes.rst
src/otpauth/: __init__.py  _rfc4226.py  _rfc6238.py  core.py  rfc4226.py  rfc6238.py  types.py
tests/: test_hotp.py  test_misc.py  test_totp.py
